Added missing dependencies and env configuration

--- a/overlay/usr/local/etc/nginx/nginx.conf
+++ b/overlay/usr/local/etc/nginx/nginx.conf
@@ -18,7 +18,7 @@ http {
 
         client_max_body_size 100M;
 
-        root      /usr/local/bookstack;
+        root      /usr/local/bookstack/public;
         index     index.php index.html index.htm;
         location / {
           try_files $uri $uri/ /index.php?$query_string;
