--- a/overlay/usr/local/etc/nginx/nginx.conf
+++ b/overlay/usr/local/etc/nginx/nginx.conf
@@ -1,7 +1,7 @@
-worker_processes  1;
+worker_processes 1;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
 
 http {
@@ -14,7 +14,7 @@ http {
     server {
         listen       80;
         listen  [::]:80;
-        server_name  localhost;
+        server_name   _;
 
         client_max_body_size 100M;
 
@@ -27,6 +27,8 @@ http {
         location ~ \.php$ {
           include         fastcgi_params;
           fastcgi_pass    unix:/var/run/php-fpm.sock;
+          fastcgi_index   index.php;
+          fastcgi_param   DOCUMENT_ROOT $realpath_root;
           fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
     }
