Successfully installs and seems to be working
More testing needed

--- a/overlay/usr/local/etc/nginx/nginx.conf
+++ b/overlay/usr/local/etc/nginx/nginx.conf
@@ -1,4 +1,6 @@
 worker_processes 1;
+error_log /var/log/nginx/error.log;
+pid /var/run/nginx.pid;
 
 events {
     worker_connections 1024;
@@ -18,8 +20,12 @@ http {
 
         client_max_body_size 100M;
 
-        root      /usr/local/bookstack/public;
+        root      /usr/local/www/bookstack/public;
         index     index.php index.html index.htm;
+
+        access_log  /var/log/nginx/bookstack_access.log;
+        error_log  /var/log/nginx/bookstack_error.log;
+
         location / {
           try_files $uri $uri/ /index.php?$query_string;
         }
